<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Register">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/chao_mung"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#1E94F3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:text="@string/moi_dang_ky"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text=""
        android:hint="@string/nhap_username"
        android:autofillHints=""
        android:textColorHint="#656565"
        android:inputType="text"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text=""
        android:hint="@string/nhap_password"
        android:autofillHints=""
        android:textColorHint="#656565"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edt_repassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text=""
        android:hint="@string/nhap_lai_password"
        android:autofillHints=""
        android:textColorHint="#656565"
        android:inputType="textPassword"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/dang_ky"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@drawable/custom_button3"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/tro_ve"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:background="@drawable/custom_button4"/>

</LinearLayout>