<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/quan_ly"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="#4AAE4E"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="5dp"
        android:text="@string/fpoly_software_company"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#FF6C3F"
        android:textAllCaps="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <Button
            android:id="@+id/btn_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/baseline_home_work_48"
            android:text="@string/phong_ban"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#FF0505"
            android:background="@drawable/custom_button5"/>
        <Button
            android:id="@+id/btn_personnel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:drawableTop="@drawable/baseline_groups_48"
            android:text="@string/nhan_vien"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#0249FF"
            android:background="@drawable/custom_button5"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawableTop="@drawable/baseline_exit_to_app_48"
        android:text="@string/thoat"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:background="@drawable/custom_button5"/>

</LinearLayout>