<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center|start"
    android:orientation="vertical"
    android:padding="15dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_nv"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red" />
        <TextView
            android:id="@+id/txt_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ho_ten"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phong_ban2"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txt_department"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageButton
            android:id="@+id/imgbtn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/update"
            android:src="@drawable/baseline_create_48"
            android:background="@color/white"/>
        <ImageButton
            android:id="@+id/imgbtn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/delete"
            android:src="@drawable/baseline_delete_48"
            android:background="@color/white"/>
    </LinearLayout>

</LinearLayout>